Fix: Unexpected action when clicking Collapse chevron

--- a/src/manage-fonts/manage-fonts.css
+++ b/src/manage-fonts/manage-fonts.css
@@ -26,6 +26,7 @@
 
 .font-family-contents .container {
     overflow: hidden;
+    display: block;
 }
 
 .font-family-contents .slide {
